--- a/RCCircuitAnalysis.tex
+++ b/RCCircuitAnalysis.tex
@@ -4,8 +4,13 @@
 \usepackage{fancyhdr}
 \usepackage{tikz}
 \usepackage{amsmath,mathtools}
+\usepackage{csquotes}
 \usepackage[hidelinks]{hyperref}
 \usepackage{scrextend}
+
+\usetikzlibrary{decorations.pathreplacing}
+
+\MakeOuterQuote{"}
 
 \deffootnotemark{\textsuperscript{[\thefootnotemark]}}
 \deffootnote{2em}{1.6em}{\textsuperscript{\thefootnotemark}}
@@ -49,6 +54,9 @@
         \draw (2,0.6) -- (2,0.7) -- (1.9,0.75) -- (2.1,0.85) -- (1.9,0.95) -- (2.1,1.05) -- (1.9,1.15) -- (2.1,1.25) -- (2,1.3) -- (2,1.4);
 
         \draw [thick,-stealth] (2.25,1.4) -- node[right]{$I$} (2.25,0.6);
+
+        \node at (-1.2,1) {\footnotesize$V_C$\scriptsize\{};
+        \node at (3,1) {\LARGE\}\footnotesize$V_R$};
     \end{tikzpicture}
     \caption{A basic RC circuit.}
     \label{fig:RC}
@@ -84,7 +92,7 @@ Let's express $V_C$ and $V_R$ in terms of other variables from Figure \ref{fig:R
     \label{fig:tree}
 \end{figure}
 
-We still need to find a way to introduce time. Fortunately, current is the time derivative of charge. While it might seem natural to substitute $\dd[Q]{t}$ for $I$, this will actually lead to an incorrect answer --- current is the rate at which charge $q$ passes through the circuit\footnote{Or, more formally, a cross section of it.}, not the rate of change of the magnitude of charge $Q$ on the plates of the capacitor. While it may now be tempting to substitute $\dd[q]{t}$ for $I$ and dismiss any relationship between $q$ and $Q$, the pair are intrinsically related.\par
+We still need to find a way to introduce time. Fortunately, current is the time derivative of charge. While it might seem natural to substitute $\dd[Q]{t}$ for $I$, this will actually lead to an incorrect answer --- current is the rate at which charge $q$ passes through the circuit\footnote{Or, more formally, a cross section of a wire.}, not the rate of change of the magnitude of charge $Q$ on the plates of the capacitor. While it may now be tempting to substitute $\dd[q]{t}$ for $I$ and dismiss any relationship between $q$ and $Q$, the pair are intrinsically related.\par
 In order to proceed, we must relate $q$ to $Q$. Let $\Delta q$ be a small quantity of charge that leaves the positive plate, passes through the circuit, and ends up on the negative plate. When $\Delta q$ leaves the positive plate, $Q$ decreases by $\Delta q$; in other words, the change in $Q$, $\Delta Q$, is equal to $-\Delta q$, or $\Delta Q = -\Delta q$. This is the relationship that we were looking for.\par
 Both sides of the relationship $\Delta Q=-\Delta q$ can be differentiated with respect to time to relate said expression back to current $I$, as follows.
 \begin{align*}
@@ -97,7 +105,7 @@ Substitute the above definition of current into the resultant equation from Figu
 \begin{equation*}
     \frac{Q}{C}+\dd[Q]{t}R=0
 \end{equation*}\par
-Solve the above first-order differential equation for $Q$, as follows. Note that $Q_0$ is the initial charge on the plates at time $t=0$, while $Q$ is the variable charge on the plates at time $t$.
+Solve the above first-order differential equation for $Q$, as follows. Note that $Q_0$ is the charge on the plates at time $t=0$, while $Q$ is the charge on the plates at time $t$.
 \begin{align*}
     \frac{Q}{RC}+\dd[Q]{t} &= 0\\
     \dd[Q]{t} &= -\frac{Q}{RC}\\
@@ -110,7 +118,7 @@ Solve the above first-order differential equation for $Q$, as follows. Note that
     \Aboxed{Q &= Q_0\e[-\frac{t}{RC}]}
 \end{align*}
 
-Note that the above equation can be holds true for $V$ and $V_0$, and $I$ and $I_0$, as well. These can be derived as follows\footnote{The substitutions are chosen and made based on the definition of capacitance and Ohm's law.}.
+Note that the above equation holds true for $V$ and $V_0$, and $I$ and $I_0$, as well. These can be derived as follows\footnote{The substitutions are chosen and made based on the definition of capacitance and Ohm's Law.}.
 \begin{align*}
     \frac{Q}{C} &= \frac{Q_0}{C}\e[-\frac{t}{RC}]&
         \frac{Q}{RC} &= \frac{Q_0}{RC}\e[-\frac{t}{RC}]\\
