--- a/RCCircuitAnalysis.tex
+++ b/RCCircuitAnalysis.tex
@@ -8,7 +8,7 @@
 \usepackage[hidelinks]{hyperref}
 \usepackage{scrextend}
 
-\usetikzlibrary{decorations.pathreplacing}
+\usetikzlibrary{decorations.pathmorphing}
 
 \MakeOuterQuote{"}
 
@@ -51,7 +51,7 @@
         \draw (-0.3,0.9) node[anchor=north east]{\scriptsize$-Q$} -- (0.3,0.9) (-0.3,1.1) node[anchor=south east]{\scriptsize$Q$} -- (0.3,1.1);
 
         \fill [white] (1.9,0.6) rectangle node[black,xshift=-4mm]{$R$} (2.1,1.4);
-        \draw (2,0.6) -- (2,0.7) -- (1.9,0.75) -- (2.1,0.85) -- (1.9,0.95) -- (2.1,1.05) -- (1.9,1.15) -- (2.1,1.25) -- (2,1.3) -- (2,1.4);
+        \draw [decoration={zigzag,segment length=2mm,amplitude=1mm,pre length=1mm},decorate] (2,0.6) -- (2,1.4);
 
         \draw [thick,-stealth] (2.25,1.4) -- node[right]{$I$} (2.25,0.6);
 
